service.yml
apiVersion: v1
kind: Service
metadata:
  name: mern-service
spec:
  type: NodePort
  selector:
     app: mern-k8-deployment
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30007
